--- a/dark-mod/index.html
+++ b/dark-mod/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        /*body {
+            padding: 25px;
+            background-color: white;
+            color: black;
+            font-size: 25px;
+        }*/
+
+        .dark-mode {
+            background-color: black;
+            color: white;
+        }
+    </style>
+</head>
+
+<body>
+
+
+
+    <button onclick="myFunction()"><span><img src="/dark.png" style="height: 1cm; "></span></button>
+
+    <script>
+        function myFunction() {
+            var element = document.body;
+            element.classList.toggle("dark-mode");
+        }
+    </script>
+
+</body>
+
+</html>
